DeleteOrTrashJob: when trashing a file in trash:/ delete it instead

BUG: 459545